--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
+// @import url(./styles/reset.scss);
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+* {
+    font-family: 'Quicksand', sans-serif;
+}
+
+.products-grid {
+    app-img {
+        img {
+            border-radius: 15px;
+        }
+    }
+}
+
+
 /* You can add global styles to this file, and also import other style files */
